Swagger za ArrangementController
